--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <script src="thirdparty-js/swf2js.js"></script>
 </head>
 <body>
-<h1>North Pole Preservation Project Demo</h1>
+<h1>North Pole Preservation Project</h1>
+<a href="elfchat/sam.html">ElfChat Remade - Sam</a>
 <script>
     swf2js.load('Santa_Dance.swf');
 </script>
