--- a/index.html
+++ b/index.html
@@ -9,4 +9,6 @@
 <script>
     swf2js.load('Santa_Dance.swf');
 </script>
+    <hr>
+    Note: This site is no way related/affiliated with Northpole Productions, LLC. Please don't sue me, I am just a big fan of everything Christmas.
 </body>
